# ffmpegvideodecodedemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/android/spport/ffmpegdemo2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/android/spport/ffmpegdemo2/: MainActivity.java  PermissionCheckerUtil.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/android/spport/ffmpegdemo2/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
mylibrary2/: build.gradle
mylibrary2/src/androidTest/java/android/spport/mylibrary2/: ExampleInstrumentedTest.java
mylibrary2/src/main/: AndroidManifest.xml
mylibrary2/src/main/cpp/: CMakeLists.txt  native-lib.cpp
mylibrary2/src/main/cpp/include/: log.h
mylibrary2/src/main/java/android/spport/mylibrary2/: AudioTrackHelper.java  AudioTrackStaticModeHelper.java  AudioTrackStreamHelper.java  Demo.java
mylibrary2/src/test/java/android/spport/mylibrary2/: ExampleUnitTest.java
